--- a/nootebock.ipynb
+++ b/nootebock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,10 +101,11 @@
     "\n",
     "# dfinir DataHandler\n",
     "dh = DataHandler(path)\n",
+    "dh.Normalize()\n",
     "# criar lista de perceptrons para serem treinados\n",
     "# deve passar p (componentes) e n (passo de treiamento)\n",
     "n = 0.1\n",
-    "list_perceptrons = [NeuronPeceptron(dh.colls - 1, n) for _ in range(500)]\n",
+    "list_perceptrons = [NeuronPeceptron(dh.colls - 1, n) for _ in range(100)]\n",
     "\n",
     "# Definir classe responsável por realizar os treinos\n",
     "rounds_per = RoundsPerceptron(dh)"
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6332500000000001\n"
+      "0.5921749999999999\n"
      ]
     }
    ],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,20 +193,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5822050000000001\n"
+      "0.56415\n"
      ]
     }
    ],
    "source": [
     "print(acuracia_adaline)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4 5]\n",
+      " [1 2 3 4 5]\n",
+      " [1 2 3 4 5]]\n",
+      "[[1]\n",
+      " [1]\n",
+      " [1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados_w = np.array(\n",
+    "    [\n",
+    "        [1,2,3,4,5],\n",
+    "        [1,2,3,4,5],\n",
+    "        [1,2,3,4,5],\n",
+    "        ]\n",
+    ")\n",
+    "delta_simu = np.array(\n",
+    "    [\n",
+    "        [1],\n",
+    "        [1],\n",
+    "        [1]\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(dados_w)\n",
+    "print(delta_simu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3]\n",
+      " [6]\n",
+      " [9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((dados_w[:,:-1].T @ delta_simu)[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
